[gd_scene load_steps=6 format=2]

[ext_resource path="res://fps_demo/assets/fonts/arial_48.tres" type="DynamicFontData" id=1]
[ext_resource path="res://fps_demo/scripts/ConfirmWindowDialog.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.449219, 0.449219, 0.449219, 0.5 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.168627, 0.168627, 0.168627, 0.501961 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_top = 22.0

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 1 )

[node name="ConfirmWindowDialog" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.5
margin_top = -90.5
margin_right = 203.5
margin_bottom = 90.5
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
custom_fonts/title_font = SubResource( 2 )
custom_colors/title_color = Color( 1, 1, 1, 1 )
popup_exclusive = true
window_title = "Confirmation dialog"
resizable = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 397.0
margin_bottom = 171.0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_right = 387.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Please confirm...Please confirm...Please confirm..."
text = "Please confirm...Please confirm...Please confirm..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 141.0
margin_right = 387.0
margin_bottom = 161.0

[node name="ButtonOK" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 191.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "OK"

[node name="ButtonCancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 195.0
margin_right = 387.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "CANCEL"
[connection signal="popup_hide" from="." to="." method="_on_ConfirmWindowDialog_popup_hide"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonOK" to="." method="_on_ButtonOK_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
